# low-power-equipment-alert-system

./: package-lock.json  package.json  tailwind.config.js
backend/: database.py  dependencies.py  main.py  models.py  pyproject.toml
backend/routers/: state.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.vue  main.js
frontend/src/css/: _checkbox-radio-switch.css
frontend/src/layouts/: DefaultLayout.vue
frontend/src/routers/: index.js
frontend/src/stores/: darkMode.js
frontend/src/views/: Alert.vue  Home.vue
notebooks/: pyproject.toml
notebooks/code/: data-processing.ipynb  processing.ipynb
src/: App.vue  main.js
src/api/: user.js
src/components/Base/: BaseButton.vue  FooterBar.vue  IconRounded.vue  SectionTitleLineWithButton.vue
src/components/Card/: CardBox.vue  CardBoxComponentHeader.vue  CardBoxModal.vue  CardBoxWidget.vue
src/components/Charts/: LineChart.vue  chart.config.js
src/components/Forms/: FormCheckRadioGroup.vue  FormControl.vue  FormControllcon.vue
src/components/MenuAside/: AsideMenu.vue  AsideMenuItem.vue  AsideMenuLayer.vue  AsideMenuList.vue  menuAside.js
src/components/NavBar/: NavBar.vue  NavBarItem.vue  NavBarItemPlain.vue  NavBarMenuList.vue  menuNavBar.js
src/components/Pill/: PillTag.vue  PillTagPlain.vue  PillTagTrend.vue
src/css/: _table.css
src/css/styles/: _basic.css
src/layouts/: DefaultLayout.vue
src/routers/: index.js
src/stores/: darkMode.js  main.js
src/views/: AddUser.vue  Alert.vue  Check.vue  Home.vue  Prediction.vue  UserManagement.vue  test.vue
(+42 files in other folders)
