[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Peng Rao <76681491+Raopend@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mysql-connector-python = "^8.3.0"
pymysql = "^1.1.0"
sqlalchemy = "^2.0.29"
python-dateutil = "^2.9.0.post0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
